Format CSS file for consistent styling

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -35,7 +35,7 @@ aside img {
   width: 200px;
   height: auto;
 }
-main {
+main img {
   width: 150px;
   height: auto;
 }
@@ -45,3 +45,4 @@ footer  {
   text-align: center;
 
 }
+
