Refactor CSS styles for images and footer
Added padding and box-shadow to main images.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -38,11 +38,15 @@ aside img {
 main img {
   width: 150px;
   height: auto;
+  border: 1px solid black;
+  padding: 10px;
+  box-shadow: 5px 10px 10px 2px rgb(0 0 0 / 0.5);
 }
 footer  {
   margin-top: 15px;
   border-top: 1px solid  #000;
   text-align: center;
 }
+
 
 
