--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,6 @@
+*{
+  margin: 0
+}
 nav {
   background-color: darkblue;
   padding: 10px;
@@ -48,6 +51,13 @@ footer  {
   text-align: center;
 }
 
+/* class selctors */
+.box {
+  border: 1px solid rgba(0,0,0,.1);
+  padding: 1rem;
+  background-color: #eee;
+  color: #000;
+}
 
 
 
