--- a/styles/styles.css
+++ b/styles/styles.css
@@ -39,6 +39,8 @@ main img {
   border: 1px solid black;
   padding: 10px;
   box-shadow: 0 0 30px gray;
+  float: right;
+  margin: 0 0 1rem 1rem;
 }
 footer  {
   
@@ -55,6 +57,7 @@ footer  {
   background-color: #eee;
   color: #000;
 }
+
 
 
 
