--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,55 +1,65 @@
-*{
+* {
   margin: 0
 }
+
 nav {
   background-color: darkblue;
   padding: 10px;
 }
+
 nav a {
   color: white;
   display: block;
   padding: 20px;
 }
+
 h1 {
   color: darkblue;
 }
+
 img {
   width: 150px;
   height: auto;
   border: 1px solid black;
   box-shadow: 0 0 30px gray;
 }
+
 p {
 padding: 0px;
 }
+
 main {
   max-width: 840px;
 }
+
 aside {
-  width: 20rem;
+  width: 20em;
   text-align: center;
   position: relative;
 }
+
 aside img {
   width: 200px;
   height: auto;
 }
+
 aside h2 {
   position: absolute;
 }
+
 main img {
   width: 150px;
   height: auto;
-  border: 1px solid black;
-  padding: 10px;
+  border: 1px solid steelblue;
+  padding: 2px;
   box-shadow: 0 0 30px gray;
   float: right;
   margin: 0 0 1rem 1rem;
 }
+
 footer  {
-  
   margin-top: 15px;
-  border-top: 1px solid  #000;
+  border-top: 1px solid black;
   text-align: center;
 }
 
@@ -58,9 +68,10 @@ footer  {
   margin: 1rem;
   border: 1px solid rgba(0,0,0,.1);
   padding: 1rem;
-  background-color: #eee;
-  color: #000;
+  background-color: gray;
+  color: black;
 }
+
 
 
 
