--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,6 +2,9 @@
   margin: 0
 }
 
+body {
+  font-size: 16px;
+  font-family: Roboto, Arial, sans-serif;
 nav {
   background-color: darkblue;
   padding: 10px;
@@ -73,6 +76,7 @@ footer  {
   background-color: gray;
   color: black;
 }
+
 
 
 
