--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,6 +5,7 @@
 body {
   font-size: 16px;
   font-family: Roboto, Arial, sans-serif;
+}
 nav {
   background-color: darkblue;
   padding: 10px;
@@ -18,6 +19,7 @@ nav a {
 
 h1 {
   color: darkblue;
+  padding: .5rem;
 }
 
 img {
@@ -28,7 +30,8 @@ img {
 }
 
 p {
-padding: 0px;
+  padding: 0px;
+  margin: 1rem;
 }
 
 main {
@@ -48,7 +51,7 @@ aside img {
 
 aside h2 {
   position: absolute;
-  top: 67px;
+  top: 60px;
   left: 150px;
 }
 
@@ -76,6 +79,10 @@ footer  {
   background-color: gray;
   color: black;
 }
+.indent {
+  padding-left: 1rem;
+}
+
 
 
 
