--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,8 +1,8 @@
 
 :root {
   --primary-color: #2F4858;
-  --secondary-color: #F6AE2D;
-  --accent1-color: #33658A;
+  /*--secondary-color: #F6AE2D;
+  --accent1-color: #33658A;*/
   --text-color: #2F4858;
   --bg-color: #F0F4F8;
   --body-font: "Arial", sans-serif; 
