--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,7 +1,7 @@
 
 :root {
   --primary-color: #2F4858;
-  --accent2-color: #33658A;
+  --accent2-color: yellow;
   --text-color: #2F4858;
   --bg-color: #F0F4F8;
   --body-font: "Arial", sans-serif; 
