--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -43,7 +43,11 @@ nav, p, section, article {
 
 .socialmedia a {
     text-decoration: none;
+    display: block;
+    width: 24px;
+    height:24px;
 }
+.
 /* 1. Set parent to relative so children stay inside it */
 .hero {
   position: relative;
