--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -30,7 +30,7 @@ header, main, footer {
 }
 
 
-h1, h2, h3 {
+h1, h2 {
     font-family: var(--heading-font);
     color: var(--primary-color);
 }
@@ -43,11 +43,10 @@ nav, p, section, article {
 
 .socialmedia a {
     text-decoration: none;
-    display: block;
+    display: inline;
     width: 24px;
     height:24px;
 }
-.
 /* 1. Set parent to relative so children stay inside it */
 .hero {
   position: relative;
