--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -27,6 +27,7 @@ header {
 header, main, footer {
   width: 840px;
   margin: 0 auto;
+  display: flex;
 }
 nav ul li a {
     color: white; /* Fixes the contrast issue */
