--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -33,6 +33,8 @@ nav ul li a {
     color: white; /* Fixes the contrast issue */
     text-decoration: none; /* Removes underline */
     font-family: var(--heading-font);
+    display: flex;
+    list-style: none;
 }
 
 .social-icon svg {
@@ -55,7 +57,8 @@ nav, p, section, article {
 
 .socialmedia a {
     text-decoration: none;
-    display: block;
+    display: flex;
+    gap: 15px;
     width: 24px;
     height:24px;
 }
