--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,18 +12,25 @@ body {
 
 nav {
   background-color: darkblue;
-  padding: 10px;
+  padding: 1rem;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 nav a {
-  color: white;
+  color: #fff;
   display: block;
-  padding: 20px;
+  padding: 0.5rem;
+  text-decoration: none;
+  font-size: 1.2rem;
+  font-weight: 700;
 }
 
 h1 {
   color: darkblue;
   padding: .5rem;
+  border-bottom: 2px;
 }
 
 img {
@@ -38,8 +45,10 @@ p {
   margin: 1rem;
 }
 
-main {
+header, .grid,footer {
   max-width: 840px;
+  margin: 0 auto;
+  
 }
 
 aside {
@@ -86,6 +95,7 @@ footer  {
 .indent {
   padding-left: 2rem;
 }
+
 
 
 
