--- a/styles/styles.css
+++ b/styles/styles.css
@@ -95,6 +95,15 @@ footer  {
 .indent {
   padding-left: 2rem;
 }
+.grid {
+  display: grid;
+  align-items: center;
+}
+main {
+  grid-column: 2/3;
+  margin: 1rem;
+}
+
 
 
 
