--- a/styles/styles.css
+++ b/styles/styles.css
@@ -55,6 +55,8 @@ aside {
   width: 20em;
   text-align: center;
   position: relative;
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
 }
 
 aside img {
@@ -103,6 +105,7 @@ main {
   grid-column: 2/3;
   margin: 1rem;
 }
+
 
 
 
