--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,7 +30,7 @@ nav a {
 h1 {
   color: darkblue;
   padding: .5rem;
-  border-bottom: 2px;
+  border-bottom: 2px solid darkblue;
 }
 
 img {
@@ -105,6 +105,7 @@ main {
   grid-column: 2/3;
   margin: 1rem;
 }
+
 
 
 
