--- a/styles/styles.css
+++ b/styles/styles.css
@@ -32,6 +32,7 @@ h1 {
   padding: .5rem;
   border-bottom: 2px solid darkblue;
   display: inline-block;
+  margin-bottom: 15px;
 }
 
 img {
@@ -106,6 +107,7 @@ main {
   grid-column: 2/3;
   margin: 1rem;
 }
+
 
 
 
