--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,6 +1,6 @@
 
 :root {
-  --primary-color: #2F4858;
+  --primary-color: #fff;
   --accent2-color: yellow;
   --text-color: #2F4858;
   --bg-color: #F0F4F8;
