--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -18,6 +18,10 @@ body {
   font-family: var(--body-font);
   color: var(--accent1-color);
 }
+header {
+  color: var(--accent2-color)
+  background-color: var(--secondary-color);
+}
 
 header, main, footer {
   width: 840px;
