--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -19,7 +19,7 @@ body {
   color: var(--accent1-color);
 }
 header {
-  color: var(--accent2-color)
+  color: var(--accent2-color);
   background-color: var(--secondary-color);
 }
 
@@ -28,7 +28,7 @@ header, main, footer {
   margin: 0 auto;
 }
 nav ,ul ,li, a {
-    color: white; 
+    color: ; accent1-color;
     text-decoration: none; 
     font-family: var(--heading-font);
     display: flex;
