--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -28,7 +28,7 @@ header, main, footer {
   margin: 0 auto;
 }
 nav ,ul ,li, a {
-    color: ; accent1-color;
+    color:  accent1-color;
     text-decoration: none; 
     font-family: var(--heading-font);
     display: flex;
