--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -3,7 +3,7 @@
   --primary-color: #055a05; /* forest green */
   --secondary-color: #f4a261; /* warm sand */
   --accent1-color: #264653; /* dark slate blue */
-  --accent2-color: #F0F4F8;
+  --accent2-color: black;
   --body-font: "Arial", sans-serif; 
   --heading-font: "Verdana", sans-serif;
 }
