--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -306,3 +306,6 @@ header img {
     width: 100%;
     position: static;
 }
+.map-container iframe {
+    width: 100%;  /* This handles the width correctly! */
+}
