--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -33,7 +33,7 @@ nav li {
 }
 
 nav ,ul ,li, a {
-    color:  accent1-color;
+    color: var(--accent1-color);
     text-decoration: none; 
     font-family: var(--heading-font);
     list-style: none;
