--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -151,7 +151,7 @@ h1 {
 .contact-form h2 {
     margin-top: 0;
     margin-bottom: 1.5rem;
-    color: var(--primary-color); /
+    color: var(--primary-color); 
     border-bottom: 2px solid #ccc;
     padding-bottom: 10px;
 }
