--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -77,7 +77,7 @@ h1 {
   padding: 16px;
   opacity: 0.7;
   background-color: var(--accent1-color); /* Using our variable */
-  color: #fff;
+  color: #ffffff;
   text-align: center;
 }
 
