Change secondary color to white in rafting.css

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,7 +1,7 @@
 
 :root {
   --primary-color: #055a05; /* forest green */
-  --secondary-color: #f4a261; /* warm sand */
+  --secondary-color: #ffffff; /* warm sand */
   --accent1-color: #0000FF;
   --accent2-color: black;
   --body-font: "Arial", sans-serif; 
