--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -228,6 +228,7 @@ footer {
     padding: 40px 20px; /* Increased padding for better spacing */
     text-align: center;
     margin-top: 20px;
+    color: #333;
 }
 
 .socialmedia ul {
